<resources>
    <string name="app_name">淘保</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="copyright">2019 zxc ITstudio</string>
    <string name="welcome">Welcome!</string>
    <string name="hint_phone">手机号</string>
    <string name="hint_password">密码</string>
    <string name="login">登录</string>
    <string name="registered">用户注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="login_title">添加或注册账号</string>
    <string name="your_phone">你的手机号</string>
    <string name="determine">确定</string>
    <string name="new_password">新密码: </string>
    <string name="determine_password">确认新密码: </string>
    <string name="verification_code">在此输入验证码 </string>
    <string name="send">我们已经向你的手机发送六位验证码,注意查收(假的)</string>
    <string name="finish">确认修改</string>
    <string name="home">首 页</string>
    <string name="change_account">切换账号</string>
    <string name="personal_information">个人信息</string>
    <string name="personal">我的信息</string>
    <string name="change_information">修改资料</string>
    <string name="my_shop">我的店铺</string>
    <string name="add_shop">添加店铺</string>
    <string name="history">历史记录</string>
    <string name="name">你的新昵称</string>
    <string name="gender">性别:</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="birthday">生日</string>
    <string name="career">个人简介</string>
    <string name="hometown">地址</string>
    <string name="change">修改资料</string>
    <string name="shop_name">店铺名称</string>
    <string name="shop_introduce">店铺简介</string>
    <string name="goods_name">商品名称</string>
    <string name="goods_price">商品价格</string>
    <string name="number">商品数量</string>
    <string name="confirm_add">确认添加</string>
</resources>
