<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".RetrievePasswordActivity">

    <TextView
        android:id="@+id/phone_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="#312F2F"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone_user"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:text="@string/send"
        android:textColor="#0BA2E7"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/verification_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/send"
        android:gravity="center"
        android:hint="@string/verification_code"
        android:singleLine="true"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/verification_code"
        android:layout_marginTop="15dp"
        android:text="@string/new_password"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/et_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/verification_code"
        android:layout_alignBottom="@+id/new_password"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/new_password"
        android:background="@drawable/ed_frame"
        android:inputType="textPassword"
        android:singleLine="true" />

    <TextView
        android:id="@+id/determine_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_password"
        android:layout_marginTop="20dp"
        android:text="@string/determine_password"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/et_determine_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_password"
        android:layout_alignBottom="@+id/determine_password"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/determine_password"
        android:background="@drawable/ed_frame"
        android:inputType="textPassword"
        android:singleLine="true" />

    <Button
        android:id="@+id/finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/determine_password"
        android:layout_margin="17dp"
        android:background="@drawable/circle_blue"
        android:text="@string/finish"
        android:textColor="#fff"
        android:textSize="25sp" />
</RelativeLayout>
