<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPasswordActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary">

            <TextView
                android:id="@+id/tv_forget_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/forget_password"
                android:textColor="#fff"
                android:textSize="25sp" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <EditText
        android:id="@+id/et_your_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="25dp"
        android:background="@drawable/ed_frame"
        android:hint="@string/your_phone"
        android:padding="10dp"
        android:singleLine="true"
        android:textSize="20sp" />

    <Button
        android:id="@+id/bt_determine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_your_phone"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:background="@drawable/circle_blue"
        android:text="@string/determine"
        android:textColor="#fff"
        android:textSize="25sp" />

</RelativeLayout>